--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@ h1 {
 }
 body{
     font-family: 'Nanum Gothic', sans-serif;
+    color: #D8DBE2;
+}
+.menu{
+    font-style:
 }
  .color-pallete{
      background-color: white;
