--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,13 @@
 h2 {
     color: #A9BCD0;
     font-sixe: 36px;
+    text-align: center
 }
 body{
     background-color:#1B1B1E;
     font-family: 'Nanum Gothic', sans-serif;
     color: #D8DBE2;
+    text-align: center
 }
 .menu{
     font-style:
@@ -58,6 +60,7 @@ body{
 
 .btn-bgstroke {
  font-size: 20px;
+ text-align: center
  display: inline-block;
  border: 1px solid white;
  padding: 10px 20px;
