--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,9 @@ body{
     text-align: center
 }
 .menu{
-    font-style:
+    display: flex;
+    justify-content:center;
+     flex-direction: row;
 }
  .color-pallete{
      background-color: white;
@@ -53,6 +55,6 @@ body{
  width: 100%;
  padding:60px 0;
  text-align: center;
- background: ##58A4B0;
+ background-color:#58A4B0;
  color: white;
 }
