--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body{
 	width:120px;
 	float:left;
 	margin-left:2px;
+    align-items: center;
 }
  .color-pallete{
      background-color: white;
