--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,9 @@ body{
 }
 .menu{
     display: flex;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
-	margin:25px;
-	width:900px;
+	width: 100%;
 }
 .menu li {
     display: flex;
@@ -26,8 +25,8 @@ body{
     flex-direction: row;
     align-items: center;
     float: left;
-	width:120px;
-	margin: :1px;
+	width: 120px;
+
 }
  .color-pallete{
      background-color: white;
@@ -80,9 +79,12 @@ body{
 }
 video{
     flex-grow: 2;
-    padding-left: 50;
+    padding-left: 100;
 }
 .reel p{
     flex-grow: 1;
     margin: 20;
+    padding-right: 100;
+    padding-left: 100;
+    padding-top: 30;
 }
