--- a/styles.css
+++ b/styles.css
@@ -66,8 +66,10 @@ body{
 
 .header {
  width: 100%;
- padding:60px 0;
+ height: 60px;
+ padding:60px;
  text-align: center;
+ align-items: center;
  background-color:#58A4B0;
  color: white;
 }
@@ -84,9 +86,9 @@ video{
 .reel p{
     flex-grow: 1;
     margin: 20;
-    padding-right: 100;
-    padding-left: 100;
-    padding-top: 30;
+    padding-right: 100px;
+    padding-left: 100px;
+    padding-top: 70px;
 }
 .tvimage{
     width: 500px;
